css/style.css
/* ... */
.stars-image {
  margin: -1px;
}

.offer {
  font-size: 10px;
  line-height: 12px;
  padding: 4px 9px;
  background-color: #EC1F46;
  border-radius: 3px;
  color: #ffffff;
}

.rating {
  max-width: 65px;
  min-height: 46px;
  padding: 4px;
  text-align: center;
  background-color: #EC1F46;
  color: #ffffff;
  border-radius: 4px;
}

.rating__text {
  font-size: 8px;
  line-height: 10px;
}

.rating__counter {
  font-size: 14px;
  line-height: 18px;
}

.booking {
  background-color: #0A223D;
  color: #ffffff;
  border-radius: 8px;
  width: 350px;
  min-height: 210px;
  padding: 27px;
  font-family: Nunito;
}

.booking__info {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  margin-bottom: 9px;
}

.booking__price {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
}

.booking__start {
  font-weight: normal;
  font-size: 10px;
  line-height: 16px;
}

.booking__pricetag {
  font-style: normal;
  font-weight: 800;
  font-size: 24px;
  line-height: 36px;
}

.booking__per-room {
  font-style: normal;
  font-weight: normal;
  font-size: 12px;
  line-height: 7px;
}

.booking__room {
  margin-top: 7px;
}

.booking__text {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  margin-bottom: 8px;
  font-style: normal;
  font-weight: normal;
  font-size: 12px;
  line-height: 16px;
}

.booking__description {
  margin-left: 9px;
}

.booking__call-center {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  margin-bottom: 14px;
}

.booking__heading {
  font-style: normal;
  font-weight: 600;
  font-size: 18px;
  line-height: 31px;
}

.booking__number {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  color: inherit;
  text-decoration: none;
  font-weight: 600;
  font-size: 18px;
  line-height: 26px;
}

.booking__num {
  margin-left: 8px;
}

.booking__button {
  width: 100%;
  min-height: 43px;
  border-radius: 4px;
  background-color: #EC1F46;
  border: none;
  color: #ffffff;
  font-weight: 600;
  font-size: 14px;
  line-height: 19px;
  cursor: pointer;
}

.map {
  width: 347px;
  height: 213px;
  overflow: hidden;
}

.newsletter {
  position: relative;
  padding: 80px 0 65px 0;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
}

.newsletter:before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(10, 34, 61, 0.8);
}

.newsletter-container {
  position: relative;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  max-width: 731px;
  margin: auto;
}

.newsletter-title {
  color: #ffffff;
  font-style: normal;
  font-weight: 300;
  font-size: 24px;
  line-height: 30px;
}

.newsletter-title__strong {
  display: block;
  font-size: 36px;
  line-height: 45px;
  text-transform: uppercase;
}

.subscribe {
  position: relative;
  width: 351px;
  min-height: 55px;
  border-radius: 4px;
  overflow: hidden;
}

.subscribe__input {
  position: absolute;
  width: 100%;
  height: 100%;
  border: none;
  padding-left: 33px;
  padding-right: 75px;
  font-style: normal;
  font-weight: 300;
  font-size: 14px;
  line-height: 18px;
}

.subscribe__button {
  position: absolute;
  width: 66px;
  height: 100%;
  right: 0;
  top: 0;
  height: 100%;
  border: none;
  background-color: #EC1F46;
  color: #ffffff;
  font-style: normal;
  font-weight: bold;
  font-size: 12px;
  line-height: 15px;
}

.reviews {
  padding: 40px 0 70px 0;
}

.reviews-title {
  margin: 0;
  margin-bottom: 70px;
  font-style: normal;
  font-weight: bold;
  font-size: 36px;
  line-height: 45px;
  text-align: center;
  text-transform: uppercase;
}

.reviews-slider__item {
  position: relative;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  max-width: 730px;
  margin: 45px auto 0;
  padding: 0 62px 27px;
  background-color: #ffffff;
  border-radius: 8px;
}

.reviews-slider__item:before {
  content: '';
  width: 70px;
  height: 47px;
  left: 62px;
  top: 13px;
  position: absolute;
  background-image: url(../img/quote-left.svg);
  background-repeat: no-repeat;
}

.reviews-slider__item:after {
  content: '';
  width: 70px;
  height: 47px;
  right: 62px;
  top: 118px;
  position: absolute;
  background-image: url(../img/quote-right.svg);
  background-repeat: no-repeat;
  z-index: -1;
}

.reviews-slider__button {
  position: absolute;
  top: 41%;
  -webkit-transform: translateY(-50%);
          transform: translateY(-50%);
  width: 30px;
  height: 30px;
  background-repeat: no-repeat;
  background-size: 10px;
  background-position: center;
  border: none;
  background-color: transparent;
  cursor: pointer;
  z-index: 88;
}
/* ... */

